# cpp_functional_programming

./: .gitignore  CMakeLists.txt  README.md
src/: ch2_averages.cxx  ch2_collection_partitioning.cxx  ch2_filtering_and_transforming.cxx  ch2_string_trimming.cxx  ch3_function_pointers.cxx  ch7_filtering_and_transforming.cxx
